# sherlockscan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
integration/: __init__.py  test_end_to_end.py
sherlockscan/: __init__.py  cli.py  exceptions.py  utils.py
sherlockscan/config/: __init__.py  approved_packages.yaml  risk_patterns.yaml
sherlockscan/report/: __init__.py  json_formatter.py  markdown_formatter.py
sherlockscan/scanner/: __init__.py  ast_scanner.py  deps.py  explainer.py  heuristics.py  install_script_analyzer.py
tests/: test_ast_scanner.py  test_cli.py  test_deps.py  test_explainer.py  test_heuristics.py  test_install_script_analyzer.py  test_json_formatter.py  test_markdown_formatter.py  test_utils.py
